--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -119,7 +119,9 @@
             <div class="clearfix"></div>
         </div>
     </div>
-    <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;margin-left: 240px; margin-top: 80px;"
-            name="iframe" frameborder="0" src="home"></iframe>
+    <div>
+        <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;margin-left: 240px; margin-top: 80px;"
+                name="iframe" frameborder="0" src="home"></iframe>
+    </div>
 </div>
 </html>
