--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,121 +1,133 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:with="title='管理中心',active='home'">
-<!--<header th:replace="admin/header::headerFragment(${title},${active})"></header>-->
-<body class="fixed-left">
-<div id="wrapper">
-    <!--<div th:replace="admin/header::header-body"></div>-->
-    <div class="content-page">
-        <div class="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h4 class="page-title">仪表盘</h4>
-                    </div>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8"/>
+    <title><th:block th:text="个人管理"></th:block></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta content="Coderthemes" name="author"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <link rel="shortcut icon" th:href="@{/admin/images/favicon.png}"/>
+    <link th:href="@{//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link th:href="@{/admin/css/style.min.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
+    <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
 
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="mini-stat clearfix bx-shadow bg-info">
-                                <span class="mini-stat-icon"><i class="fa fa-quote-right" aria-hidden="true"></i></span>
-                                <div class="mini-stat-info text-right">
-                                    发表了<span class="counter"></span>篇文章
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="mini-stat clearfix bg-purple bx-shadow">
-                                <span class="mini-stat-icon"><i class="fa fa-comments-o" aria-hidden="true"></i></span>
-                                <div class="mini-stat-info text-right">
-                                    收到了<span class="counter"></span>条留言
-                                </div>
-                            </div>
-                        </div>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="mini-stat clearfix bg-success bx-shadow">
-                                <span class="mini-stat-icon"><i class="fa fa-cloud-upload"
-                                                                aria-hidden="true"></i></span>
-                                <div class="mini-stat-info text-right">
-                                    上传了<span class="counter"></span>个附件
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="mini-stat clearfix bg-primary bx-shadow">
-                                <span class="mini-stat-icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-                                <div class="mini-stat-info text-right">
-                                    友链了<span class="counter"></span>个好友
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">最新文章</h4>
-                                </div>
-                                <div class="panel-body">
-                                    <ul class="list-group">
-                                        <!--<li class="list-group-item" th:each="article : ${articles}">
-                            <span class="badge badge-primary"
-                                  th:title="${article.commentsNum}+'条评论'" th:text="${article.commentsNum}"></span>
-                                            <a target="_blank" th:href="${commons.site_url('/article/')}+${article.cid}"
-                                               th:text="${article.title}"></a>
-                                        </li>-->
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">最新留言</h4>
-                                </div>
-                                <div class="panel-body">
-                                    <!--<div th:if="${comments}== null and ${#lists.size(comments)}==0">
-                                        <div class="alert alert-warning">
-                                            还没有收到留言.
-                                        </div>
-                                    </div>
-                                    <ul class="list-group"
-                                        th:unless="${comments}==null and ${#lists.size(comments)}==0">
-                                        <li class="list-group-item" th:each="comment : ${comments}">
-                                            <div th:if="${comment.url}!=null and ${comment.url}!=''">
-                                                <a th:href="@{${comment.url}}" target="_blank"
-                                                   th:text="${comment.author}"></a>
-                                            </div>
-                                            <th:block th:unless="${comment.url}!=null and ${comment.url}!=''" th:text="${comment.author}"/>
-                                            于<th:block th:text="${commons.fmtdate(comment.created,'MM月dd日HH:mm')}"/>：<a
-                                                th:href="${commons.site_url('/article/')}+${comment.cid}+'#comments'"
-                                                target="_blank" th:utext="${commons.article(comment.content)}"></a>
-                                        </li>
-                                    </ul>-->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h4 class="panel-title">系统日志</h4>
-                                </div>
-                                <div class="panel-body">
-                                    <ul class="list-group" >
-                                        <!--<li class="list-group-item" th:each="log : ${logs}">
-                                            <span th:text="${commons.fmtdate(log.created, 'yyyy-MM-dd HH:mm:ss')} +' => '+ ${log.action}"></span>
-                                        </li>-->
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <script>
+        $(function () {
+            $("#iframe").height($(window).height());
+        })
+    </script>
+</head>
+<div>
+    <div class="topbar">
+        <div class="topbar-left">
+            <div class="text-center p-t-10" style="margin: 0 auto;">
+                <div class="pull-left" style="padding-left: 10px;">
+                    <a th:href="@{/index}">
+                        <img th:src="@{/admin/images/logo.png}" width="50" height="50"/>
+                    </a>
                 </div>
-                <!--<div th:replace="admin/footer :: footer-content"></div>-->
+                <div class="pull-left" style="padding-left: 10px;">
+                    <span style="font-size: 28px; color: #2f353f; line-height: 50px;">Freedom</span>
+                </div>
+            </div>
+        </div>
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="">
+                    <div class="pull-left">
+                        <button type="button" class="button-menu-mobile open-left">
+                            <i class="fa fa-bars"></i>
+                        </button>
+                        <span class="clearfix"></span>
+                    </div>
+
+                    <ul class="nav navbar-nav navbar-right pull-right">
+                        <li class="dropdown">
+                            <!--<a th:href="@{home.html}" class="dropdown-toggle profile" data-toggle="dropdown"
+                               aria-expanded="true">
+                                <img th:src="${commons.gravatar(session.login_user.email)}" alt="user-img"
+                                                         class="img-circle"/> </a>
+                            <ul class="dropdown-menu">
+                                <li><a th:href="@{${commons.site_url()}}" target="_blank"><i class="fa fa-eye"
+                                                                                             aria-hidden="true"></i>
+                                    查看网站</a></li>-->
+                                <li><a th:href="@{/admin/profile}"><i class="fa fa-sun-o"></i> 个人设置</a></li>
+                                <li><a th:href="@{/admin/logout}"><i class="fa fa-sign-out"></i> 注销</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
+    <div class="left side-menu">
+        <div class="sidebar-inner slimscrollleft">
+            <div id="sidebar-menu">
+                <ul>
+                    <li th:class="active">
+                        <a th:href="@{/index}">
+                            <i class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>
+                    </li>
+                    <!--<li th:class="${active}=='home'?'active':''">
+                        <a th:href="@{/admin/index}"
+                           th:class="${active}=='home'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>
+                    </li>-->
+                    <li th:class="">
+                        <a th:href="@{/admin/article/publish}">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i><span> 发布文章 </span></a>
+                    </li>
+                    <!--<li th:class="${active}=='article'?'active':''">
+                        <a th:href="@{/admin/article}"
+                           th:class="${active}=='article'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-list" aria-hidden="true"></i><span> 文章管理 </span></a>
+                    </li>
+                    <li th:class="${active}=='page'?'active':''">
+                        <a th:href="@{/admin/page}" th:class="${active}=='page'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-file-text" aria-hidden="true"></i><span> 页面管理 </span></a>
+                    </li>
+                    <li th:class="${active}=='comments'?'active':''">
+                        <a th:href="@{/admin/comments}"
+                           th:class="${active}=='comments'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span></a>
+                    </li>
+                    <li th:class="${active}=='category'?'active':''">
+                        <a th:href="@{/admin/category}"
+                           th:class="${active}=='category'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-tags" aria-hidden="true"></i><span> 分类/标签 </span></a>
+                    </li>
+                    <li th:class="${active}=='attach'?'active':''">
+                        <a th:href="@{/admin/attach}"
+                           th:class="${active}=='attach'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-cloud-upload" aria-hidden="true"></i><span> 文件管理 </span></a>
+                    </li>
+                    <li th:class="${active}=='links'?'active':''">
+                        <a th:href="@{/admin/links}" th:class="${active}=='links'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-link" aria-hidden="true"></i><span> 友链管理 </span></a>
+                    </li>
+                    <li th:class="${active}=='setting'?'active':''">
+                        <a th:href="@{/admin/setting}"
+                           th:class="${active}=='setting'?'waves-effect active':'waves-effect'"><i
+                                class="fa fa-gear" aria-hidden="true"></i><span> 系统设置 </span></a>
+                    </li>-->
+                </ul>
+                <div class="clearfix"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <div>
+        <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;"
+                name="iframe" frameborder="0" src="home"></iframe>
+    </div>
 </div>
-<!--<div th:replace="admin/footer :: footer"></div>-->
-</body>
 </html>
