--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,133 +1,112 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html class="no-js fixed-layout" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
-    <title><th:block th:text="个人管理"></th:block></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta content="Coderthemes" name="author"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="shortcut icon" th:href="@{/admin/images/favicon.png}"/>
-    <link th:href="@{//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <link th:href="@{/admin/css/style.min.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
-    <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Amaze UI Admin index Examples</title>
+    <meta name="description" content="这是一个 index 页面">
+    <meta name="keywords" content="index">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <link rel="icon" type="image/png" th:href="@{/assets/i/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" th:href="@{/assets/i/app-icon72x72@2x.png}">
+    <link rel="stylesheet" th:href="@{/assets/css/amazeui.min.css}" />
+    <link rel="stylesheet" th:href="@{/assets/css/admin.css}">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-    <script>
-        $(function () {
-            $("#iframe").height($(window).height());
-        })
-    </script>
 </head>
-<div>
-    <div class="topbar">
-        <div class="topbar-left">
-            <div class="text-center p-t-10" style="margin: 0 auto;">
-                <div class="pull-left" style="padding-left: 10px;">
-                    <a th:href="@{/index}">
-                        <img th:src="@{/admin/images/logo.png}" width="50" height="50"/>
-                    </a>
-                </div>
-                <div class="pull-left" style="padding-left: 10px;">
-                    <span style="font-size: 28px; color: #2f353f; line-height: 50px;">Freedom</span>
-                </div>
-            </div>
-        </div>
-        <div class="navbar navbar-default" role="navigation">
-            <div class="container">
-                <div class="">
-                    <div class="pull-left">
-                        <button type="button" class="button-menu-mobile open-left">
-                            <i class="fa fa-bars"></i>
-                        </button>
-                        <span class="clearfix"></span>
-                    </div>
+<body>
+<!--[if lte IE 9]>
+<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，Amaze UI 暂不支持。 请 <a href="http://browsehappy.com/" target="_blank">升级浏览器</a>
+    以获得更好的体验！</p>
+<![endif]-->
 
-                    <ul class="nav navbar-nav navbar-right pull-right">
-                        <li class="dropdown">
-                            <!--<a th:href="@{home.html}" class="dropdown-toggle profile" data-toggle="dropdown"
-                               aria-expanded="true">
-                                <img th:src="${commons.gravatar(session.login_user.email)}" alt="user-img"
-                                                         class="img-circle"/> </a>
-                            <ul class="dropdown-menu">
-                                <li><a th:href="@{${commons.site_url()}}" target="_blank"><i class="fa fa-eye"
-                                                                                             aria-hidden="true"></i>
-                                    查看网站</a></li>-->
-                                <li><a th:href="@{/admin/profile}"><i class="fa fa-sun-o"></i> 个人设置</a></li>
-                                <li><a th:href="@{/admin/logout}"><i class="fa fa-sign-out"></i> 注销</a></li>
-                            </ul>
-                        </li>
+<header class="am-topbar am-topbar-inverse admin-header">
+    <div class="am-topbar-brand">
+        <strong>Amaze UI</strong> <small>后台管理模板</small>
+    </div>
+
+    <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
+
+    <div class="am-collapse am-topbar-collapse" id="topbar-collapse">
+
+        <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list">
+            <li><a href="javascript:;"><span class="am-icon-envelope-o"></span> 收件箱 <span class="am-badge am-badge-warning">5</span></a></li>
+            <li class="am-dropdown" data-am-dropdown>
+                <a class="am-dropdown-toggle" data-am-dropdown-toggle href="javascript:;">
+                    <span class="am-icon-users"></span> 管理员 <span class="am-icon-caret-down"></span>
+                </a>
+                <ul class="am-dropdown-content">
+                    <li><a href="#"><span class="am-icon-user"></span> 资料</a></li>
+                    <li><a href="#"><span class="am-icon-cog"></span> 设置</a></li>
+                    <li><a href="#"><span class="am-icon-power-off"></span> 退出</a></li>
+                </ul>
+            </li>
+            <li class="am-hide-sm-only"><a href="javascript:;" id="admin-fullscreen"><span class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span></a></li>
+        </ul>
+    </div>
+</header>
+
+<div class="am-cf admin-main">
+    <!-- sidebar start -->
+    <div class="admin-sidebar am-offcanvas" id="admin-offcanvas">
+        <div class="am-offcanvas-bar admin-offcanvas-bar">
+            <ul class="am-list admin-sidebar-list">
+                <li><a href="admin-index.html"><span class="am-icon-home"></span> 首页</a></li>
+                <li class="admin-parent">
+                    <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 页面模块 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+                    <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
+                        <li><a href="admin-user.html" class="am-cf"><span class="am-icon-check"></span> 个人资料<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
+                        <li><a href="admin-help.html"><span class="am-icon-puzzle-piece"></span> 帮助页</a></li>
+                        <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 相册页面<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
+                        <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
+                        <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
                     </ul>
+                </li>
+                <li><a href="admin-table.html"><span class="am-icon-table"></span> 表格</a></li>
+                <li><a href="admin-form.html"><span class="am-icon-pencil-square-o"></span> 表单</a></li>
+                <li><a href="#"><span class="am-icon-sign-out"></span> 注销</a></li>
+            </ul>
+
+            <div class="am-panel am-panel-default admin-sidebar-panel">
+                <div class="am-panel-bd">
+                    <p><span class="am-icon-bookmark"></span> 公告</p>
+                    <p>时光静好，与君语；细水流年，与君同。—— Amaze UI</p>
+                </div>
+            </div>
+
+            <div class="am-panel am-panel-default admin-sidebar-panel">
+                <div class="am-panel-bd">
+                    <p><span class="am-icon-tag"></span> wiki</p>
+                    <p>Welcome to the Amaze UI wiki!</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="left side-menu">
-        <div class="sidebar-inner slimscrollleft">
-            <div id="sidebar-menu">
-                <ul>
-                    <li th:class="active">
-                        <a th:href="@{/index}">
-                            <i class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>
-                    </li>
-                    <!--<li th:class="${active}=='home'?'active':''">
-                        <a th:href="@{/admin/index}"
-                           th:class="${active}=='home'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span></a>
-                    </li>-->
-                    <li th:class="">
-                        <a th:href="@{/admin/article/publish}">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i><span> 发布文章 </span></a>
-                    </li>
-                    <!--<li th:class="${active}=='article'?'active':''">
-                        <a th:href="@{/admin/article}"
-                           th:class="${active}=='article'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-list" aria-hidden="true"></i><span> 文章管理 </span></a>
-                    </li>
-                    <li th:class="${active}=='page'?'active':''">
-                        <a th:href="@{/admin/page}" th:class="${active}=='page'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-file-text" aria-hidden="true"></i><span> 页面管理 </span></a>
-                    </li>
-                    <li th:class="${active}=='comments'?'active':''">
-                        <a th:href="@{/admin/comments}"
-                           th:class="${active}=='comments'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span></a>
-                    </li>
-                    <li th:class="${active}=='category'?'active':''">
-                        <a th:href="@{/admin/category}"
-                           th:class="${active}=='category'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-tags" aria-hidden="true"></i><span> 分类/标签 </span></a>
-                    </li>
-                    <li th:class="${active}=='attach'?'active':''">
-                        <a th:href="@{/admin/attach}"
-                           th:class="${active}=='attach'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-cloud-upload" aria-hidden="true"></i><span> 文件管理 </span></a>
-                    </li>
-                    <li th:class="${active}=='links'?'active':''">
-                        <a th:href="@{/admin/links}" th:class="${active}=='links'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-link" aria-hidden="true"></i><span> 友链管理 </span></a>
-                    </li>
-                    <li th:class="${active}=='setting'?'active':''">
-                        <a th:href="@{/admin/setting}"
-                           th:class="${active}=='setting'?'waves-effect active':'waves-effect'"><i
-                                class="fa fa-gear" aria-hidden="true"></i><span> 系统设置 </span></a>
-                    </li>-->
-                </ul>
-                <div class="clearfix"></div>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-    <div>
-        <iframe id="iframe" style="border:0; width:100%; background-color:#FFF;"
-                name="iframe" frameborder="0" src="home"></iframe>
-    </div>
+    <!-- sidebar end -->
+    <div class="admin-content">
+    <iframe id="iframe" style="border:0; background-color:#FFF; width: 100%" name="iframe" frameborder="0"
+            src="home"></iframe></div>
 </div>
+
+<a href="#" class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: '#admin-offcanvas'}"></a>
+
+<!--[if lt IE 9]>
+<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
+<script src="assets/js/amazeui.ie8polyfill.min.js"></script>
+<![endif]-->
+
+<!--[if (gte IE 9)|!(IE)]><!-->
+<script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
+<!--<![endif]-->
+<script th:src="@{/assets/js/amazeui.min.js}"></script>
+<script th:src="@{/assets/js/app.js}"></script>
+<script>
+    $(function () {
+        $("#iframe").height($(window).height() - 50);
+    });
+</script>
+</body>
 </html>
