--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <!-- content start -->
-
+<div class="admin-content">
     <div class="admin-content-body">
         <div class="am-cf am-padding">
             <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">首页</strong> / <small>一些常用模块</small></div>
@@ -252,7 +252,7 @@
         <hr>
         <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
     </footer>
-
+</div>
 <!-- content end -->
 </body>
 </html>
