--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -22,7 +22,7 @@
                     <div class="am-panel-bd">
                         <div class="am-g">
                             <div class="am-u-md-4">
-                                <img class="am-img-circle am-img-thumbnail"
+                                <img class="am-img-radius am-img-thumbnail"
                                      th:src="@{${src!=null}?${src}:'imgs/minami.jpg'}"
                                      alt="" id="imgHead"/>
                             </div>
