--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,8 +77,8 @@
                         <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
                     </ul>
                 </li>
-                <li><a href="admin-table.html"><span class="am-icon-table"></span> 表格</a></li>
-                <li><a href="admin-form.html"><span class="am-icon-pencil-square-o"></span> 表单</a></li>
+                <li><a name="/admin/article/list"><span class="am-icon-table"></span> 表格</a></li>
+                <li><a name="/admin/article/edit"><span class="am-icon-pencil-square-o"></span> 表单</a></li>
                 <li><a href="#"><span class="am-icon-sign-out"></span> 注销</a></li>
             </ul>
 
