--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
     <meta charset="UTF-8">
     <title>Login Page | Amaze UI Example</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="alternate icon" type="image/png" href="assets/i/favicon.png">
-    <link rel="stylesheet" href="assets/css/amazeui.min.css"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <link rel="alternate icon" type="image/png" th:href="@{assets/i/favicon.png}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/admin.css}">
     <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
     <style>
         .header {
             text-align: center;
         }
+
         .header h1 {
             font-size: 200%;
             color: #333;
             margin-top: 30px;
         }
+
         .header p {
             font-size: 14px;
         }
@@ -31,7 +34,7 @@
         <h1>Web ide</h1>
         <p>Integrated Development Environment<br/>代码编辑，代码生成，界面设计，调试，编译</p>
     </div>
-    <hr />
+    <hr/>
 </div>
 <div class="am-g">
     <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
@@ -39,8 +42,10 @@
         <hr>
         <div class="am-btn-group">
             <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
-            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i> Google+</a>
-            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i> stackOverflow</a>
+            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i>
+                Google+</a>
+            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i>
+                stackOverflow</a>
         </div>
         <br>
         <br>
@@ -53,10 +58,10 @@
             <input type="password" name="password" id="password" value="">
             <br>
             <label for="remember-me">
-                <input id="remember-me" type="checkbox">
+                <input id="remember-me" type="checkbox" name="remeber_me">
                 记住密码
             </label>
-            <br />
+            <br/>
             <div class="am-cf">
                 <input type="button" onclick="login()" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">
                 <input type="button" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr">
@@ -69,12 +74,14 @@
 <script>
     function login() {
         $.ajax({
-            type:"POST",
-            url:"/login",
-            data:$("#loginForm").serialize(),
-            dataType:"JSON",
+            type: "POST",
+            url: "/login",
+            data: $("#loginForm").serialize(),
+            dataType: "JSON",
             success: function (result) {
-                window.location.href = "index";
+                if (result.success == "true") {
+                    window.location.href = "/index";
+                }
             }
         })
     }
