--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -72,6 +72,11 @@
     </div>
 </div>
 <script>
+    $(function () {
+       if(window != top){
+           top.location.href = location.href;
+       }
+    });
     function login() {
         $.ajax({
             type: "POST",
@@ -79,7 +84,7 @@
             data: $("#loginForm").serialize(),
             dataType: "JSON",
             success: function (result) {
-                if (result.success == "true") {
+                if (result.success) {
                     window.location.href = "/index";
                 }
             }
