--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -23,7 +23,7 @@
                         <div class="am-g">
                             <div class="am-u-md-4">
                                 <img class="am-img-radius am-img-thumbnail"
-                                     th:src="@{${src!=null}?${src}:'imgs/minami.jpg'}"
+                                     th:src="@{${src!=null}?${src}:'/imgs/akari.jpg'}"
                                      alt="" id="imgHead"/>
                             </div>
                             <div class="am-u-md-8">
