add swal plan 模块.

--- a/src/main/resources/templates/admin/plan_list.html
+++ b/src/main/resources/templates/admin/plan_list.html
@@ -20,26 +20,20 @@
             <div class="am-u-sm-12 am-u-md-6">
                 <div class="am-btn-toolbar">
                     <div class="am-btn-group am-btn-group-xs">
-                        <button type="button" class="am-btn am-btn-default" data-am-modal="{target: '#addPlan'}">
+                        <button type="button" class="am-btn am-btn-default" onclick="modifyPlan()">
                             <span class="am-icon-plus"></span> 新增
                         </button>
-                        <button type="button" class="am-btn am-btn-default" onclick="delPlans()"><span class="am-icon-trash-o"></span> 删除
+                        <button type="button" class="am-btn am-btn-default" onclick="delPlans()"><span
+                                class="am-icon-trash-o"></span> 删除
                         </button>
                     </div>
-                </div>
-            </div>
-            <div class="am-u-sm-12 am-u-md-3">
-                <div class="am-form-group">
-                    <select data-am-selected="{btnSize: 'sm'}">
-                        <option value="option1">所有类别</option>
-                    </select>
                 </div>
             </div>
             <div class="am-u-sm-12 am-u-md-3">
                 <div class="am-input-group am-input-group-sm">
                     <input type="text" class="am-form-field">
                     <span class="am-input-group-btn">
-            <button class="am-btn am-btn-default" type="button">搜索</button>
+            <button class="am-btn am-btn-default" type="button" onclick="search()">搜索</button>
           </span>
                 </div>
             </div>
@@ -65,16 +59,20 @@
                             <td><input type="checkbox"/><input type="hidden" th:value="${plan.id}"/></td>
                             <td></td>
                             <td><a href="#" th:text="${plan.title}"></a></td>
-                            <td class="am-hide-sm-only" th:text="${plan.startTime}"></td>
-                            <td class="am-hide-sm-only" th:text="${plan.endTime}"></td>
+                            <td class="am-hide-sm-only"
+                                th:text="${dateUtil.dateFormat(plan.startTime, 'yyyy-MM-dd')}"></td>
+                            <td class="am-hide-sm-only"
+                                th:text="${dateUtil.dateFormat(plan.endTime, 'yyyy-MM-dd')}"></td>
                             <td>default</td>
                             <td>
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs">
-                                        <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span
-                                                class="am-icon-pencil-square-o"></span> 编辑
+                                        <button type="button" class="am-btn am-btn-default am-btn-xs am-text-secondary"
+                                                th:onclick="'modifyPlan('+${plan.id}+');'">
+                                            <span class="am-icon-pencil-square-o"></span> 编辑
                                         </button>
-                                        <button class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only">
+                                        <button type="button" class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only"
+                                                th:onclick="'delPlans('+${plan.id}+')'">
                                             <span class="am-icon-trash-o"></span> 删除
                                         </button>
                                     </div>
@@ -83,20 +81,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <div class="am-cf">
-                        共 15 条记录
-                        <div class="am-fr">
-                            <ul class="am-pagination">
-                                <li class="am-disabled"><a href="#">«</a></li>
-                                <li class="am-active"><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">»</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    <div th:replace="comm/macros :: pageAdminNav(${plans})"></div>
                     <hr/>
                 </form>
             </div>
@@ -120,32 +105,35 @@
         <div class="am-popup-bd">
             <form id="planForm" class="am-form" data-am-validator>
                 <fieldset>
-                    <input type="hidden" name="id" />
+                    <input type="hidden" name="id" id="doc-vld-id-2"/>
                     <div class="am-form-group">
                         <label for="doc-vld-name-2">计划：</label>
                         <input type="text" id="doc-vld-name-2" name="title" placeholder="输入计划" required/>
                     </div>
 
                     <div class="am-form-group">
-                    <div class="am-alert am-alert-danger" id="my-alert" style="display: none">
-                        <p>开始日期应小于结束日期！</p>
+                        <label for="doc-vld-ta-2">简介：</label>
+                        <textarea id="doc-vld-ta-2" maxlength="100" name="content" placeholder="最多输入100字"
+                                  required></textarea>
                     </div>
+
+                    <div class="am-form-group">
+                        <div class="am-alert am-alert-danger" id="my-alert" style="display: none">
+                            <p>开始日期应小于结束日期！</p>
+                        </div>
                     </div>
 
                     <div class="am-form-group" style="height: 35px">
                         <div class="am-u-sm-6">
-                            <button type="button" class="am-btn am-btn-default am-margin-right" id="my-start">开始日期</button>
-                            <span id="my-startDate" name="startTime"></span>
+                            <button type="button" class="am-btn am-btn-default am-margin-right" id="my-start">开始日期
+                            </button>
+                            <span id="my-startDate"></span><input type="hidden" name="startTime" id="startTime"/>
                         </div>
                         <div class="am-u-sm-6">
-                            <button type="button" class="am-btn am-btn-default am-margin-right" id="my-end">结束日期</button>
-                            <span id="my-endDate" name="endTime"></span>
+                            <button type="button" class="am-btn am-btn-default am-margin-right" id="my-end">结束日期
+                            </button>
+                            <span id="my-endDate"></span><input type="hidden" name="endTime" id="endTime"/>
                         </div>
-                    </div>
-
-                    <div class="am-form-group">
-                        <label for="doc-vld-ta-2">简介：</label>
-                        <textarea id="doc-vld-ta-2" maxlength="100" name="content" placeholder="最多输入100字" required></textarea>
                     </div>
 
                     <button class="am-btn am-btn-secondary" type="button" onclick="editPlan()">提交</button>
