--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,14 @@
     <!--<![endif]-->
     <script th:src="@{/assets/js/amazeui.min.js}"></script>
     <script th:src="@{/assets/js/app.js}"></script>
+    <script th:src="@{/js/base.js}"></script>
+    <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
+    <script th:src="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.js}"></script>
+    <style>
+        .swal2-container{
+            z-index: 9999 !important;
+        }
+    </style>
 </head>
 <body>
 
