--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,12 +77,12 @@
                         <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 相册页面<span
                                 class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                         <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
-                        <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
+                        <li><a name="/admin/category/list" class="iframeurl"><span class="am-icon-bug"></span> 分类</a></li>
                     </ul>
                 </li>
-                <li><a name="/admin/plan/list" class="iframeurl"><span class="am-icon-table"></span> 表格</a></li>
-                <li><a name="/admin/article/edit" class="iframeurl"><span class="am-icon-pencil-square-o"></span> 表单</a></li>
-                <li><a href="#"><span class="am-icon-sign-out"></span> 注销</a></li>
+                <li><a name="/admin/plan/list" class="iframeurl"><span class="am-icon-table"></span> 计划列表</a></li>
+                <li><a name="/admin/article/list" class="iframeurl"><span class="am-icon-pencil-square-o"></span> 文章列表</a></li>
+                <li><a name="/admin/article/edit" class="iframeurl"><span class="am-icon-sign-out"></span> 发布文章</a></li>
             </ul>
 
             <div class="am-panel am-panel-default admin-sidebar-panel">
