--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -4,6 +4,57 @@
     <meta charset="UTF-8">
     <title>article</title>
 </head>
+<script th:src="@{/js/wangEditor.min.js}"></script>
+<style>
+    /* table 样式 */
+    table {
+        border-top: 1px solid #ccc;
+        border-left: 1px solid #ccc;
+    }
+
+    table td,
+    table th {
+        border-bottom: 1px solid #ccc;
+        border-right: 1px solid #ccc;
+        padding: 3px 5px;
+    }
+
+    table th {
+        border-bottom: 2px solid #ccc;
+        text-align: center;
+    }
+
+    /* blockquote 样式 */
+    blockquote {
+        display: block;
+        border-left: 8px solid #d0e5f2;
+        padding: 5px 10px;
+        margin: 10px 0;
+        line-height: 1.4;
+        font-size: 100%;
+        background-color: #f1f1f1;
+    }
+
+    /* code 样式 */
+    code {
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        background-color: #f1f1f1;
+        border-radius: 3px;
+        padding: 3px 5px;
+        margin: 0 3px;
+    }
+
+    pre code {
+        display: block;
+    }
+
+    /* ul ol 样式 */
+    ul, ol {
+        margin: 10px 0 10px 20px;
+    }
+</style>
 <body>
 <!-- content start -->
 <div class="admin-content">
@@ -17,185 +68,52 @@
 
         <hr>
 
-        <div class="am-tabs am-margin" data-am-tabs>
-            <ul class="am-tabs-nav am-nav am-nav-tabs">
-                <li class="am-active"><a href="#tab1">基本信息</a></li>
-                <li><a href="#tab2">详细描述</a></li>
-                <li><a href="#tab3">SEO 选项</a></li>
-            </ul>
-
-            <div class="am-tabs-bd">
-                <div class="am-tab-panel am-fade am-in am-active" id="tab1">
+        <div class="am-tabs am-margin">
+            <div class="am-tab-panel am-fade am-in am-active" id="tab1">
+                <form class="am-form" id="articleForm">
+                    <input type="hidden" id="content" name="content"
+                           th:value="${article!=null and article.id!=null} ? ${article.id} : ''">
+                    <input type="hidden" id="categoryIds" name="categoryIds">
+                    <input type="hidden" id="categories" name="categories">
                     <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">所属类别</div>
-                        <div class="am-u-sm-8 am-u-md-10">
-                            <select data-am-selected="{btnSize: 'sm'}">
-                                <option value="option1">选项一...</option>
-                                <option value="option2">选项二.....</option>
-                                <option value="option3">选项三........</option>
+                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                            文章标题
+                        </div>
+                        <div class="am-u-sm-8 am-u-md-4">
+                            <input type="text" class="am-input-sm" id="title" name="title"
+                                   th:value="${article!=null and article.title!=null} ? ${article.title} : ''">
+                        </div>
+                        <div class="am-hide-sm-only am-u-md-6"></div>
+                    </div>
+                    <div class="am-g am-margin-top">
+                        <div class="am-u-sm-12 am-u-md-2 am-text-right admin-form-text">
+                            内容描述
+                        </div>
+                        <div class="am-u-sm-12 am-u-md-10" id="editor">
+                            <p th:text="${article!=null and article.content!=null} ? ${article.content} : ''"></p>
+                        </div>
+                    </div>
+                    <div class="am-g am-margin-top">
+                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                            分类
+                        </div>
+                        <div class="am-u-sm-8 am-u-md-4">
+                            <select multiple data-am-selected id="select-category">
+                                <th:block th:each="c : ${categories}">
+                                    <option th:value="${c.id}" th:text="${c.name}"
+                                            th:selected="${article!=null and common.exists_cate(article.categories, c.id)}?true:false">
+                                    </option>
+                                </th:block>
                             </select>
                         </div>
+                        <div class="am-u-sm-12 am-u-md-6"></div>
                     </div>
-
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">显示状态</div>
-                        <div class="am-u-sm-8 am-u-md-10">
-                            <div class="am-btn-group" data-am-button>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="radio" name="options" id="option1"> 正常
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="radio" name="options" id="option2"> 待审核
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="radio" name="options" id="option3"> 不显示
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">推荐类型</div>
-                        <div class="am-u-sm-8 am-u-md-10">
-                            <div class="am-btn-group" data-am-button>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="checkbox"> 允许评论
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="checkbox"> 置顶
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="checkbox"> 推荐
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="checkbox"> 热门
-                                </label>
-                                <label class="am-btn am-btn-default am-btn-xs">
-                                    <input type="checkbox"> 轮播图
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                            发布日期
-                        </div>
-                        <div class="am-u-sm-8 am-u-md-10">
-                            <form action="" class="am-form am-form-inline">
-                                <div class="am-form-group am-form-icon">
-                                    <i class="am-icon-calendar"></i>
-                                    <input type="date" class="am-form-field am-input-sm" placeholder="日期">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div class="am-g am-margin-top">
-                        <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                            发布时间
-                        </div>
-                        <div class="am-u-sm-8 am-u-md-10">
-                            <form action="" class="am-form am-form-inline">
-                                <div class="am-form-group am-form-icon">
-                                    <i class="am-icon-calendar"></i>
-                                    <input type="datetime-local" class="am-form-field am-input-sm" placeholder="时间">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="am-tab-panel am-fade" id="tab2">
-                    <form class="am-form">
-                        <div class="am-g am-margin-top">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                文章标题
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                            <div class="am-hide-sm-only am-u-md-6">*必填，不可重复</div>
-                        </div>
-
-                        <div class="am-g am-margin-top">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                文章作者
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                        </div>
-
-                        <div class="am-g am-margin-top">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                信息来源
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                            <div class="am-hide-sm-only am-u-md-6">选填</div>
-                        </div>
-
-                        <div class="am-g am-margin-top">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                内容摘要
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                            <div class="am-u-sm-12 am-u-md-6">不填写则自动截取内容前255字符</div>
-                        </div>
-
-                        <div class="am-g am-margin-top-sm">
-                            <div class="am-u-sm-12 am-u-md-2 am-text-right admin-form-text">
-                                内容描述
-                            </div>
-                            <div class="am-u-sm-12 am-u-md-10">
-                                <textarea rows="10" placeholder="请使用富文本编辑插件"></textarea>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-
-                <div class="am-tab-panel am-fade" id="tab3">
-                    <form class="am-form">
-                        <div class="am-g am-margin-top-sm">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                SEO 标题
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4 am-u-end">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                        </div>
-
-                        <div class="am-g am-margin-top-sm">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                SEO 关键字
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4 am-u-end">
-                                <input type="text" class="am-input-sm">
-                            </div>
-                        </div>
-
-                        <div class="am-g am-margin-top-sm">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                SEO 描述
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4 am-u-end">
-                                <textarea rows="4"></textarea>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-
+                </form>
             </div>
         </div>
 
         <div class="am-margin">
-            <button type="button" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
+            <button type="button" id="save-article" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
             <button type="button" class="am-btn am-btn-primary am-btn-xs">放弃保存</button>
         </div>
     </div>
@@ -205,6 +123,7 @@
         <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
     </footer>
 </div>
+<script th:src="@{/js/article.js}"></script>
 <!-- content end -->
 </body>
 </html>
