--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -19,7 +19,6 @@
         <div class="am-g">
             <div class="am-u-sm-12">
                 <div class="am-panel-hd">
-                    <h1 class="">分类列表</h1>
                 </div>
                 <div class="am-panel-bd">
                     <div class="am-dropdown" data-am-dropdown th:each="c:${categories}">
@@ -42,7 +41,7 @@
 
         <div class="am-g">
             <div class="am-u-sm-12 am-u-md-3">
-                <div class="am-input-group am-input-group-sm">
+                <div class="am-input-group am-input-group-sm" style="margin-left: 12px">
                     <input type="hidden" id="cid"/>
                     <input type="text" id="cname" class="am-form-field" placeholder="请输入分类名称">
                     <span class="am-input-group-btn">
