--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -20,8 +20,6 @@
                     <div class="am-btn-group am-btn-group-xs">
                         <button type="button" class="am-btn am-btn-default"><span class="am-icon-plus"></span> 新增
                         </button>
-                        <button type="button" class="am-btn am-btn-default"><span class="am-icon-trash-o"></span> 删除
-                        </button>
                     </div>
                 </div>
             </div>
@@ -38,6 +36,7 @@
                             <th class="table-title">标题</th>
                             <th class="table-author am-hide-sm-only">作者</th>
                             <th class="table-date am-hide-sm-only">发布日期</th>
+                            <th class="table-category">类别</th>
                             <th class="table-set">操作</th>
                         </tr>
                         </thead>
@@ -48,6 +47,7 @@
                             <td><a href="#" th:text="${a.title}"></a></td>
                             <td class="am-hide-sm-only" th:text="${a.userVo.fullname}"></td>
                             <td class="am-hide-sm-only" th:text="${dateUtil.dateFormat(a.addTime, 'yyyy-MM-dd')}"></td>
+                            <td class="am-hide-sm-only" th:text="${a.categories}"></td>
                             <td>
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs">
