--- a/src/main/resources/templates/admin/plan_list.html
+++ b/src/main/resources/templates/admin/plan_list.html
@@ -23,9 +23,6 @@
                         <button type="button" class="am-btn am-btn-default" onclick="modifyPlan()">
                             <span class="am-icon-plus"></span> 新增
                         </button>
-                        <button type="button" class="am-btn am-btn-default" onclick="delPlans()"><span
-                                class="am-icon-trash-o"></span> 删除
-                        </button>
                     </div>
                 </div>
             </div>
@@ -55,7 +52,9 @@
                                 th:text="${dateUtil.dateFormat(plan.startTime, 'yyyy-MM-dd')}"></td>
                             <td class="am-hide-sm-only"
                                 th:text="${dateUtil.dateFormat(plan.endTime, 'yyyy-MM-dd')}"></td>
-                            <td>default</td>
+                            <td th:if="${plan.startTime} lt ${new java.util.Date()} and ${plan.endTime} gt ${new java.util.Date()} ">进行中</td>
+                            <td th:if="${plan.startTime} gt ${new java.util.Date()}  ">未开始</td>
+                            <td th:if="${plan.endTime} lt ${new java.util.Date()}  ">已结束</td>
                             <td>
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs">
